force-app/main/default/objects/summit__Summit_Events__c/summit__Summit_Events__c.object-meta.xml
<CustomObject>
    <description>Parent Event object to setup individual Event Sessions</description>
    <label>Summit Events</label>
    <nameField>
        <label>Event Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Summit Events</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>