force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Academic_Program_List__c.field-meta.xml
<CustomField>
    <fullName>summit__Academic_Program_List__c</fullName>
    <description>List of selected academic programs.</description>
    <inlineHelpText>List of selected academic programs.</inlineHelpText>
    <label>Academic Program List</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>