force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Academic_Program_List_Selected__c.field-meta.xml
<CustomField>
    <fullName>summit__Academic_Program_List_Selected__c</fullName>
    <description>List of academic programs selected.</description>
    <inlineHelpText>List of academic programs selected.</inlineHelpText>
    <label>Academic Program List Selected</label>
    <length>6000</length>
    <type>LongTextArea</type>
</CustomField>