force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Academic_Program_Selected__c.field-meta.xml
<CustomField>
    <fullName>summit__Academic_Program_Selected__c</fullName>
    <description>Programs available for selection in academic programs.</description>
    <inlineHelpText>Programs available for selection in academic programs.</inlineHelpText>
    <label>Academic Program Selected</label>
    <length>8000</length>
    <type>LongTextArea</type>
</CustomField>