force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Accessibility_Detail_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Accessibility_Detail_Label__c</fullName>
    <defaultValue>&apos;Please indicate your accessibility request below.&apos;</defaultValue>
    <description>The label to the question where the applicant is asked specifics about the accessibility needs they require.</description>
    <inlineHelpText>The label to the question where the applicant is asked specifics about the accessibility needs they require.</inlineHelpText>
    <label>Accessibility Detail Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>