force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Accessibility_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Accessibility_Label__c</fullName>
    <defaultValue>&apos;Do you have any accessibility needs for this event?&apos;</defaultValue>
    <description>The label to the picklist question where the applicant is asked if they have any accessibility needs.</description>
    <inlineHelpText>The label to the picklist question where the applicant is asked if they have any accessibility needs.</inlineHelpText>
    <label>Accessibility Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>