force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Account__c.field-meta.xml
<CustomField>
    <fullName>summit__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account associated with this event.</description>
    <inlineHelpText>Account associated with this event.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Summit Events</relationshipLabel>
    <relationshipName>Summit_Events</relationshipName>
    <type>Lookup</type>
</CustomField>