force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Add_Info_Question_Pick_List_2__c.field-meta.xml
<CustomField>
    <fullName>summit__Add_Info_Question_Pick_List_2__c</fullName>
    <description>Return separated list that will be converted to a pick-list.</description>
    <inlineHelpText>Return separated list that will be converted to a pick-list.</inlineHelpText>
    <label>Add Info Question Pick List 2</label>
    <type>TextArea</type>
</CustomField>