force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Add_Info_Question_Text_1__c.field-meta.xml
<CustomField>
    <fullName>summit__Add_Info_Question_Text_1__c</fullName>
    <description>The text of the question you are asking.</description>
    <inlineHelpText>The text of the question you are asking. Character Limit is based on the corresponding Add Info Answer field (limit:5000)</inlineHelpText>
    <label>Add Info Question Text 1</label>
    <type>TextArea</type>
</CustomField>