force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Add_Info_Question_Type_2__c.field-meta.xml
<CustomField>
    <fullName>summit__Add_Info_Question_Type_2__c</fullName>
    <description>What type of additional question input do you require. If pick-list you will need to provide values in the Add Info Question Pick-list.</description>
    <inlineHelpText>What type of additional question input do you require. If pick-list you will need to provide values in the Add Info Question Pick-list.</inlineHelpText>
    <label>Add Info Question Type 2</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Pick-list</fullName>
            </value>
            <value>
                <fullName>Pick-list required</fullName>
            </value>
            <value>
                <fullName>Text area</fullName>
            </value>
            <value>
                <fullName>Text area required</fullName>
            </value>
            <value>
                <fullName>Text box</fullName>
            </value>
            <value>
                <fullName>Text box required</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>