force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Allow_Other_Attendees__c.field-meta.xml
<CustomField>
    <fullName>summit__Allow_Other_Attendees__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Activate allowing other attendees to the event in addition to primary attendee. This does NOT prompt Guest Registration questions but add total guests to the individual registration.</description>
    <inlineHelpText>Activate allowing other attendees to the event in addition to primary attendee. This does NOT prompt the Guest Registration process.</inlineHelpText>
    <label>Allow Other Attendees</label>
    <type>Checkbox</type>
</CustomField>