force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Alternate_Registration_URL__c.field-meta.xml
<CustomField>
    <fullName>summit__Alternate_Registration_URL__c</fullName>
    <description>If you don not wish to use Salesforce for event registration but rather another event system enter the URL to that registration page here.</description>
    <inlineHelpText>If you don not wish to use Salesforce for event registration but rather another event system enter the URL to that registration page here.</inlineHelpText>
    <label>Alternate Registration URL</label>
    <type>Url</type>
</CustomField>