force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Applicant_Type_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Applicant_Type_Label__c</fullName>
    <defaultValue>&quot;Application Type&quot;</defaultValue>
    <description>Label for the Applicant Type field in the Registration Form</description>
    <inlineHelpText>Label for the Applicant Type field in the Registration Form</inlineHelpText>
    <label>Applicant Type Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>