force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Ask_Accessibility_Needs__c.field-meta.xml
<CustomField>
    <fullName>summit__Ask_Accessibility_Needs__c</fullName>
    <description>Ask if the registrant has accessibility needs for the event.</description>
    <inlineHelpText>Ask if the registrant has accessibility needs for the event.</inlineHelpText>
    <label>Ask Accessibility Needs</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not ask</fullName>
                <default>true</default>
                <label>Do not ask</label>
            </value>
            <value>
                <fullName>Ask</fullName>
            </value>
            <value>
                <fullName>Ask and require</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>