force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Ask_Applicant_Type__c.field-meta.xml
<CustomField>
    <fullName>summit__Ask_Applicant_Type__c</fullName>
    <description>Setting this will override applicant type for this event and the user will not be queried about what applicant type they are. Use this if you know the event is only for a and audience of registrants that fall under the same application type.</description>
    <inlineHelpText>Setting this will override applicant type for this event and the user will not be queried about what applicant type they are. Use this if you know the event is only for a and audience of registrants that fall under the same application type.</inlineHelpText>
    <label>Ask Applicant Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do not ask</fullName>
                <default>true</default>
                <label>Do not ask</label>
            </value>
            <value>
                <fullName>Ask</fullName>
            </value>
            <value>
                <fullName>Ask and require</fullName>
            </value>
            <value>
                <fullName>Do not ask but assign First-Year</fullName>
            </value>
            <value>
                <fullName>Do not ask but assign Transfer</fullName>
            </value>
            <value>
                <fullName>Do not ask but assign Graduate</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>