force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Ask_Date_Of_Birth__c.field-meta.xml
<CustomField>
    <fullName>summit__Ask_Date_Of_Birth__c</fullName>
    <description>Ask for registrants date of birth upon registration. This will be included in matching to the contact record.</description>
    <inlineHelpText>Ask for registrants date of birth upon registration. This will be included in matching to the contact record.</inlineHelpText>
    <label>Ask Date Of Birth</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do not ask</fullName>
                <default>true</default>
                <label>Do not ask</label>
            </value>
            <value>
                <fullName>Ask</fullName>
            </value>
            <value>
                <fullName>Ask and require</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>