force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Ask_Dietary_Restrictions__c.field-meta.xml
<CustomField>
    <fullName>summit__Ask_Dietary_Restrictions__c</fullName>
    <description>Label for the dietary restriction Dietary Restrictions field in the Registration Form.</description>
    <inlineHelpText>Label for the dietary restriction Dietary Restrictions field in the Registration Form.</inlineHelpText>
    <label>Ask Dietary Restrictions</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not ask</fullName>
                <default>true</default>
                <label>Do not ask</label>
            </value>
            <value>
                <fullName>Ask</fullName>
            </value>
            <value>
                <fullName>Ask and require</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>