force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Ask_If_Parent__c.field-meta.xml
<CustomField>
    <fullName>summit__Ask_If_Parent__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ask whether the person filling out is a parent or student. This will helps when a parent is signing up for a student to come to an event (we then capture both sets of data).</description>
    <inlineHelpText>Ask whether the person filling out is a parent or student. This will helps when a parent is signing up for a student to come to an event (we then capture both sets of data).</inlineHelpText>
    <label>Ask If Parent</label>
    <type>Checkbox</type>
</CustomField>