force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Ask_Mailing_Address__c.field-meta.xml
<CustomField>
    <fullName>summit__Ask_Mailing_Address__c</fullName>
    <description>Ask the registrant for their mail address on registration page.</description>
    <inlineHelpText>Ask the registrant for their mail address on registration page.</inlineHelpText>
    <label>Ask Mailing Address</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Do not ask</fullName>
                <default>true</default>
                <label>Do not ask</label>
            </value>
            <value>
                <fullName>Ask</fullName>
            </value>
            <value>
                <fullName>Ask and require</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>