force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Ask_Phone__c.field-meta.xml
<CustomField>
    <fullName>summit__Ask_Phone__c</fullName>
    <description>Ask the registrant for their phone number on the registration page.</description>
    <inlineHelpText>Ask the registrant for their phone number on the registration page.</inlineHelpText>
    <label>Ask Phone</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not ask</fullName>
                <default>true</default>
                <label>Do not ask</label>
            </value>
            <value>
                <fullName>Ask with type</fullName>
            </value>
            <value>
                <fullName>Ask with type require</fullName>
            </value>
            <value>
                <fullName>Ask home and mobile</fullName>
            </value>
            <value>
                <fullName>Ask home and mobile require one</fullName>
            </value>
            <value>
                <fullName>Ask home and mobile require both</fullName>
            </value>
            <value>
                <fullName>Ask mobile</fullName>
            </value>
            <value>
                <fullName>Ask mobile and require</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>