force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Ask_Preferred_Class_Year__c.field-meta.xml
<CustomField>
    <fullName>summit__Ask_Preferred_Class_Year__c</fullName>
    <description>The graduation year the registrant prefer to be identified with.</description>
    <inlineHelpText>The graduation year the registrant prefer to be identified with.</inlineHelpText>
    <label>Ask Preferred Class Year</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not ask</fullName>
                <default>true</default>
                <label>Do not ask</label>
            </value>
            <value>
                <fullName>Ask</fullName>
            </value>
            <value>
                <fullName>Ask and require</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>