force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Ask_Registrant_Program_Of_Interest__c.field-meta.xml
<CustomField>
    <fullName>summit__Ask_Registrant_Program_Of_Interest__c</fullName>
    <description>Determines how you query the event registrant about their program of interest.</description>
    <inlineHelpText>Determines how you query the event registrant about their program of interest.</inlineHelpText>
    <label>Ask Registrant Program Of Interest</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not ask</fullName>
                <default>true</default>
                <label>Do not ask</label>
            </value>
            <value>
                <fullName>Ask but do not require</fullName>
            </value>
            <value>
                <fullName>Ask and require</fullName>
            </value>
            <value>
                <fullName>Ask and require one selection</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>