force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Ask_Relationship_To_Institution__c.field-meta.xml
<CustomField>
    <fullName>summit__Ask_Relationship_To_Institution__c</fullName>
    <label>Ask Relationship To Institution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Do not ask</fullName>
                <default>true</default>
                <label>Do not ask</label>
            </value>
            <value>
                <fullName>Ask</fullName>
            </value>
            <value>
                <fullName>Ask and require</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>