force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Ask_Third_Party_Registrant__c.field-meta.xml
<CustomField>
    <fullName>summit__Ask_Third_Party_Registrant__c</fullName>
    <inlineHelpText>Capture information if the person registering is not the registrant. For additional values, add matching values to picklist on registration as well as this field</inlineHelpText>
    <label>Ask Third Party Registrant</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Parent/Guardian</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Company Representative</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>