force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Audience__c.field-meta.xml
<CustomField>
    <fullName>summit__Audience__c</fullName>
    <description>Choose the audience that this event is targeted.</description>
    <inlineHelpText>Choose the audience that this event is targeted.</inlineHelpText>
    <label>Audience</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>No Audience</fullName>
            </value>
            <value>
                <fullName>Prospective Student</fullName>
            </value>
            <value>
                <fullName>General Public</fullName>
            </value>
            <value>
                <fullName>Current Students</fullName>
            </value>
            <value>
                <fullName>Faculty/Staff</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>