force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Building__c.field-meta.xml
<CustomField>
    <fullName>summit__Building__c</fullName>
    <description>The  building the event is being hosted in.</description>
    <inlineHelpText>The  building the event is being hosted in.</inlineHelpText>
    <label>Building</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>summit__Buildings</valueSetName>
    </valueSet>
</CustomField>