force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Close_Event_Days_Before__c.field-meta.xml
<CustomField>
    <fullName>summit__Close_Event_Days_Before__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The amount of days before the event that you want registration to close (accepting no new registrants)</description>
    <inlineHelpText>The amount of days before the event that you want registration to close (accepting no new registrants)</inlineHelpText>
    <label>Close Event Days Before</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>