force-app/main/default/objects/summit__Summit_Events__c/fields/summit__College_High_School_Ask__c.field-meta.xml
<CustomField>
    <fullName>summit__College_High_School_Ask__c</fullName>
    <description>Get High School and College information and last attended/graduation date.</description>
    <inlineHelpText>Get High School and College information and last attended/graduation date.</inlineHelpText>
    <label>College High School Ask</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Don&apos;t ask</fullName>
            </value>
            <value>
                <fullName>Both College and HS</fullName>
            </value>
            <value>
                <fullName>HS Only</fullName>
            </value>
            <value>
                <fullName>College Only</fullName>
            </value>
            <value>
                <fullName>Auto Select on Audience</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>