force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Community_Base_URL__c.field-meta.xml
<CustomField>
    <fullName>summit__Community_Base_URL__c</fullName>
    <description>The base URL of the Salesforce community. This is not the start of the event app, just the start of the orgs community.</description>
    <formula>If (CONTAINS(RIGHT($Setup.summit__Summit_Events_Settings__c.summit__Community_Base_URL__c,1), &apos;/&apos;),
$Setup.summit__Summit_Events_Settings__c.summit__Community_Base_URL__c,
$Setup.summit__Summit_Events_Settings__c.summit__Community_Base_URL__c + &apos;/&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>The base URL of the Salesforce community. This is not the start of the event app, just the start of the orgs community.</inlineHelpText>
    <label>Community Base URL</label>
    <type>Text</type>
</CustomField>