force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Company_Organization_Label__c.field-meta.xml
<CustomField>
    <fullName>summit__Company_Organization_Label__c</fullName>
    <defaultValue>&quot;Company or Organization&quot;</defaultValue>
    <description>Label for the Company field in the Registration Form</description>
    <inlineHelpText>Label for the Company field in the Registration Form</inlineHelpText>
    <label>Company/Organization Label</label>
    <length>255</length>
    <type>Text</type>
</CustomField>