force-app/main/default/objects/summit__Summit_Events__c/fields/summit__Contact_Creation__c.field-meta.xml
<CustomField>
    <fullName>summit__Contact_Creation__c</fullName>
    <defaultValue>&quot;Full matching contact creation with duplicate management&quot;</defaultValue>
    <description>Choice of whether to create contact records and how to deal with duplicates.</description>
    <inlineHelpText>Choice of whether to create contact records and how to deal with duplicates.</inlineHelpText>
    <label>DEPRECATED - Contact Creation</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Full matching contact creation with duplicate management</fullName>
            </value>
            <value>
                <fullName>Hard matching contact creation and with no duplicate management</fullName>
            </value>
            <value>
                <fullName>No matching or contact creation</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>